fix align name in footer

--- a/singolo2.css
+++ b/singolo2.css
@@ -165,7 +165,7 @@ a {
     line-height: 18px;
     color: #666d89;
     font-weight: 900;
-    padding: 11px 0px;
+    padding: 12px 0px 10px 0px;
     white-space: nowrap;
 }
 
